# qt_study_with_cpp

./: CMakeLists.txt  main.cpp  readme.md  resources.qrc
src/: main.cpp
src/widgets/: HoverDetectableButton.cpp  HoverDetectableButton.h  RoundButton.cpp  RoundButton.h
